--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply antialiased bg-gray-50;
+    @apply antialiased bg-gray-900;
   }
   
   /* Smooth scrolling */
@@ -14,7 +14,7 @@
   
   /* Focus styles */
   *:focus {
-    @apply outline-none ring-2 ring-primary-500 ring-offset-2;
+    @apply outline-none ring-2 ring-primary-400 ring-offset-2 ring-offset-gray-900;
   }
   
   /* Form inputs default styling */
